--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -5,7 +5,7 @@
 
       <!-- HERO SECTION-->
       <div class="container">
-        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url({% static 'img/hero-banner.jpg' %});">
+        <section class="hero pb-3 bg-cover bg-center d-flex align-items-center" style="background: url({% static 'img/hero-banner.jpg' %})">
           <div class="container py-5">
             <div class="row px-4 px-lg-5">
               <div class="col-lg-6">
@@ -86,7 +86,7 @@
                       </div>
                     </div>
                     <h6> <a class="reset-anchor" href="detail.html">{{ product.title }}</a></h6>
-                    <p class="small text-muted">${{product.price}}</p>
+                    <p class="small text-muted">&#8377{{product.price}}</p>
                   </div>
                 </div>
 
