--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block metatitle %}SHOP Me{% endblock metatitle %}</title>
+    <title>{% block metatitle %}SHOP me | Django Ecommerce{% endblock metatitle %}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -23,8 +23,8 @@
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;800&amp;display=swap">
-    <!-- stylesheet-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" id="theme-stylesheet">
+    <!--stylesheet-->
+    <link rel="stylesheet" href="{% static 'css/style.sea.css' %}" id="theme-stylesheet">
     <!-- Favicon-->
     <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
