--- a/templates/footer.html
+++ b/templates/footer.html
@@ -31,7 +31,7 @@
           </div>
           <div class="border-top pt-4" style="border-color: #1d1d1d !important">
             <div class="row">
-              <div class="col-lg-6 justify-content-center">
+              <div class="col-lg-6">
                 <p class="small text-muted mb-0">&copy; 2022 All rights reserved.</p>
               </div>
             </div>
